--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -59,7 +59,7 @@
                 >
 
                 <studio.carbonylgroup.textfieldboxes.ExtendedEditText
-                    android:id="@+id/edtPassword"
+                    android:id="@+id/edtpassword"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:inputType="textPassword"
@@ -88,7 +88,7 @@
                 android:text="Daftar Sebagai User"
                 android:textColor="@color/black"
                 android:backgroundTint="@color/white"
-                android:id="@+id/btnRegister"/>
+                android:id="@+id/btnRegistrasi"/>
 
         </LinearLayout>
 
